side bar issue and layout issue

--- a/mytime-ui/src/app/common/components/actions-renderer.component.css
+++ b/mytime-ui/src/app/common/components/actions-renderer.component.css
@@ -3,6 +3,8 @@
     padding: 0.25rem 0.5rem !important;
     font-size: 0.875rem !important;
     line-height: 1.5 !important;
+    margin-top: 5px !important;
+
 }
 
 .btn-edit .mdi,
